--- a/NavyAccountWeb/Views/ClaimType/claimReportByDate.cshtml
+++ b/NavyAccountWeb/Views/ClaimType/claimReportByDate.cshtml
@@ -52,11 +52,15 @@
                     </div>
                 </div>
                 </div>
-                <div class="row" style="margin-top:-14px">
-                    <div class="col-12 col-xl-4">
-                        Excel @Html.CheckBoxFor(x => x.excel)
-                    </div>
+            <div class="row" style="margin-top:-14px">
+                <div class="col-12 col-xl-4">
+                    Excel @Html.CheckBoxFor(x => x.excel)
                 </div>
+                <div class="col-12 col-xl-4">
+                    Personnel <input type="checkbox" id="checkpersonnel" />
+                </div>
+            </div>
+
                 <div class="row">
                 <div class="form-group">
                     <input type="submit" value="Print" class="offset-3 btn btn-success" />
@@ -71,6 +75,9 @@
 
 </div>
 
+<script>
+    function
 
+</script>
 
 
