--- a/NavyAccountWeb/Views/BalsheetReport/maintrialbalance.cshtml
+++ b/NavyAccountWeb/Views/BalsheetReport/maintrialbalance.cshtml
@@ -43,6 +43,11 @@
 
                         </div>
                     </div>
+                    <div class="row" style="margin-top:-14px">
+                        <div class="col-12 col-xl-4">
+                            Excel @Html.CheckBoxFor(x => x.excel)
+                        </div>
+                    </div>
 
                 }
 
