--- a/NavyAccountWeb/Views/BalsheetReport/Index.cshtml
+++ b/NavyAccountWeb/Views/BalsheetReport/Index.cshtml
@@ -32,7 +32,7 @@
                         <div class="col-md-4">
                             <div class="form-group">
                                 @Html.LabelFor(x => x.year, "Period")
-                                @Html.TextBoxFor(x => x.year, new {@class="form-control"})
+                                @Html.TextBoxFor(x => x.year, new { @class = "form-control" })
                             </div>
                         </div>
 
@@ -41,6 +41,11 @@
                                 <input type="submit" class="btn btn-lg btn-primary" value="Continue" />
                             </div>
 
+                        </div>
+                    </div>
+                    <div class="row" style="margin-top:-14px">
+                        <div class="col-12 col-xl-4">
+                            Excel @Html.CheckBoxFor(x => x.excel)
                         </div>
                     </div>
 
