--- a/NavyAccountWeb/Views/BalsheetReport/BalsheetReport.cshtml
+++ b/NavyAccountWeb/Views/BalsheetReport/BalsheetReport.cshtml
@@ -123,8 +123,8 @@
 
                     incomingcode = a.acctcode;
                     incomingDesc = a.subdesc;
-                    mainCrd -= a.crbalance;
-                    summCrd -= a.crbalance;
+                    mainCrd += a.crbalance;
+                    summCrd += a.crbalance;
                     mainDbt += a.adbbalance;
                     summDbt += a.adbbalance;
                 }
