add  payment proposal service and controller and vue component

--- a/NavyAccountWeb/Views/SRPaymentRecord/Index.cshtml
+++ b/NavyAccountWeb/Views/SRPaymentRecord/Index.cshtml
@@ -1,5 +1,20 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
+﻿
 @{
+    ViewData["Title"] = "Index";
+    Layout = "~/Views/Shared/_SchoolLayout.cshtml";
 }
+
+<div class="row">
+    <div class="col-12">
+        <div class="card">
+            <div class="card-header">
+                <h5 class="card-title">Student List</h5>
+               
+            </div>
+
+            <print-payment-proposal></print-payment-proposal>
+        </div>
+    </div>
+</div>
+
+
