--- a/NavyAccountWeb/Views/Shared/_SchoolLayout.cshtml
+++ b/NavyAccountWeb/Views/Shared/_SchoolLayout.cshtml
@@ -88,7 +88,7 @@
                             <ul id="pages-3" class="sidebar-dropdown list-unstyled collapse" data-parent="#sidebar">
 
                                 <li class="sidebar-item">
-                                    <a asp-controller="" class="sidebar-link" asp-action="">Print Payment Schedule</a>
+                                    <a asp-controller="SRPaymentRecord" class="sidebar-link" asp-action="Index">Print Payment Schedule</a>
                                 </li>
                                 <li class="sidebar-item">
                                     <a asp-controller="" class="sidebar-link" asp-action="">Payment Upload</a>
