--- a/NavyAccountWeb/Views/Shared/_SchoolLayout.cshtml
+++ b/NavyAccountWeb/Views/Shared/_SchoolLayout.cshtml
@@ -47,7 +47,7 @@
                     <svg>
                         <use xlink:href="#ion-ios-pulse-strong"></use>
                     </svg>
-                    NIGERIAN NAVY NPF
+                    NN STUDENTS WELFARE SCHEME
                 </a>
                 <div class="sidebar-content">
                     <div class="sidebar-user">
@@ -65,16 +65,16 @@
                             <ul id="pages-2" class="sidebar-dropdown list-unstyled collapse" data-parent="#sidebar">
 
                                 <li class="sidebar-item">
-                                    <a asp-controller="SRStudentRecord" class="sidebar-link" asp-action="Create">New Student</a>
+                                    <a asp-controller="SRStudentRecord" class="sidebar-link" asp-action="Create">New Student</a> 
                                 </li>
                                 <li class="sidebar-item">
-                                    <a asp-controller="" class="sidebar-link" asp-action="">New Student Upload</a>
+                                    <a asp-controller="SRStudentRecord" class="sidebar-link" asp-action="studentupload">New Student Upload</a>
                                 </li>
                                 <li class="sidebar-item">
-                                    <a asp-controller="SRStudentRecord" class="sidebar-link" asp-action="Index">Existing Students</a>
+                                    <a asp-controller="SRStudentRecord" class="sidebar-link" asp-action="ViewStudent">Existing Students</a>
                                 </li>
                                 <li class="sidebar-item">
-                                    <a asp-controller="SRStudentRecord" class="sidebar-link" asp-action=""> Former Students</a>
+                                    <a asp-controller="SRStudentRecord" class="sidebar-link" asp-action="OldStudent"> Former Students</a>
                                 </li>
                                 <li class="sidebar-item">
                                     <a asp-controller="" class="sidebar-link" asp-action="">Student on Claim</a>
@@ -110,10 +110,10 @@
                             <ul id="pages-4" class="sidebar-dropdown list-unstyled collapse" data-parent="#sidebar">
 
                                 <li class="sidebar-item">
-                                    <a asp-controller="" class="sidebar-link" asp-action="">Initiate Claim</a>
+                                    <a asp-controller="SRClaimRecord" class="sidebar-link" asp-action="InitiateClaim">Initiate Claim</a>
                                 </li>
                                 <li class="sidebar-item">
-                                    <a asp-controller="" class="sidebar-link" asp-action="">Cliam Upload</a>
+                                    <a asp-controller="SRClaimRecord" class="sidebar-link" asp-action="CliamUpload">Cliam Upload</a>
                                 </li>
                                 <li class="sidebar-item">
                                     <a asp-controller="" class="sidebar-link" asp-action="">Claim Status</a>
