adjust the school record repository, add payment propsal capture model and services

--- a/NavyAccountWeb/Views/Shared/_SchoolLayout.cshtml
+++ b/NavyAccountWeb/Views/Shared/_SchoolLayout.cshtml
@@ -91,7 +91,7 @@
                                     <a asp-controller="SRPaymentRecord" class="sidebar-link" asp-action="Index">Print Payment Schedule</a>
                                 </li>
                                 <li class="sidebar-item">
-                                    <a asp-controller="" class="sidebar-link" asp-action="">Payment Upload</a>
+                                    <a asp-controller="SRPaymentRecord" class="sidebar-link" asp-action="PaymentProposalupload">Payment Upload</a>
                                 </li>
                                 <li class="sidebar-item">
                                     <a asp-controller="" class="sidebar-link" asp-action="">Print Discrepancy Report</a>
